# flotsync

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.txt  README.md  buf.yaml  rustfmt.toml
.beads/: config.yaml  (+5 more)
flotsync_data_types/: Cargo.toml
flotsync_data_types/src/: lib.rs  row_values.rs  snapshot.rs
flotsync_data_types/src/any_data/: latest_value.rs  list.rs  mod.rs
flotsync_data_types/src/linear_data/: coalesced.rs  linked_list_impl.rs  mod.rs  snapshot.rs  vec_impl.rs
flotsync_data_types/src/schema/: mod.rs  public_api.rs  values.rs
flotsync_data_types/src/schema/datamodel/: in_memory.rs  mod.rs  operations.rs  snapshots.rs  validation.rs
flotsync_data_types/src/test_support/: mod.rs  schema_operations.rs
flotsync_data_types/src/test_support/schema_operations/: mod.rs  operations.rs  schema.rs  tests.rs
flotsync_data_types/src/text/: grapheme_string.rs  linear_data.rs  linear_string.rs  mod.rs  text_diff.rs
flotsync_data_types/src/text/linear_data/: coalesced.rs  mod.rs  vec_impl.rs
flotsync_data_types/tests/: public_api_tests.rs
flotsync_discovery/: Cargo.toml  test_features.sh
flotsync_discovery/src/: endpoint_selection.rs  errors.rs  kompact_fsm.rs  lib.rs  protocol.rs  route_publication.rs  utils.rs
flotsync_discovery/src/route_establishment/: component.rs  config.rs  mod.rs  observation.rs  state.rs  tests.rs  wire.rs
flotsync_discovery/src/services/: mdns_announcement.rs  mod.rs  peer_announcement.rs  peer_announcement_observation.rs
flotsync_discovery_cli/: Cargo.toml
flotsync_discovery_cli/src/: main.rs
flotsync_io/: Cargo.toml
flotsync_io/src/: api.rs  driver.rs  errors.rs  framing.rs  kompact.rs  lib.rs  logging.rs  socket_support.rs  test_support.rs
flotsync_io/src/driver/: mod.rs  registry.rs  runtime.rs  tcp.rs  thread.rs  udp.rs
flotsync_io/src/driver/tcp/: mod.rs  tests.rs  types.rs
flotsync_io/src/kompact/: bridge.rs  driver_component.rs  listener.rs  mod.rs  runtime.rs  session.rs  tests.rs  types.rs
flotsync_io/src/kompact/driver_component/: messages.rs  mod.rs  tcp_conversion.rs  udp_conversion.rs
flotsync_io/src/kompact/tests/: bind_reuse.rs  fixtures.rs  lifecycle.rs  mod.rs  tcp_bridge.rs  udp_bridge.rs
flotsync_io/src/pool/: egress.rs  ingress.rs  mod.rs
flotsync_io/src/test_support/: driver.rs  mod.rs  probes.rs  socket_broker.rs  waits.rs
flotsync_io/tests/: kompact_tcp.rs  kompact_udp.rs  raw_tcp.rs  raw_udp.rs
flotsync_io/tests/support/: mod.rs
flotsync_io_examples/: Cargo.toml
flotsync_io_examples/scripts/: http_h11_smoke.py
flotsync_io_examples/src/: app.rs  lib.rs  support.rs
flotsync_io_examples/src/http_server/: mod.rs
flotsync_io_examples/src/netcat/: mod.rs  tcp.rs  udp.rs
flotsync_io_examples/src/replicated_checklist/: config.rs  mod.rs  runner.rs
flotsync_io_examples/src/replicated_checklist/runner/: keys.rs  mod.rs  repl.rs  setup.rs  static_group.rs
flotsync_io_examples/tests/: http_server_smoke.rs  netcat_smoke.rs
flotsync_messages/: Cargo.toml  build.rs
flotsync_messages/benches/: history_snapshot_formats.rs
flotsync_messages/src/: lib.rs  proto.rs  serialisation.rs  wire.rs
flotsync_messages/src/codecs/: mod.rs  schema.rs
flotsync_messages/src/codecs/datamodel/: columnar_history.rs  mod.rs  operations.rs
flotsync_messages/src/snapshots/: datamodel.rs
flotsync_messages/src/snapshots/datamodel/: data.rs  mod.rs  schema.rs
flotsync_messages/tests/: public_api.rs
flotsync_replication/: Cargo.toml
flotsync_replication/src/: lib.rs  runtime.rs  security_provisioning.rs  security_store.rs  test_support.rs
flotsync_replication/src/api/: changes.rs  errors.rs  groups.rs  ids.rs  mod.rs  providers.rs  security.rs  security_material.rs  snapshots.rs  store.rs  tests.rs
flotsync_replication/src/codecs/: messages.rs  mod.rs  pending_group.rs
flotsync_replication/src/codecs/messages/: common.rs  control.rs  encoding.rs  group.rs  mod.rs  tests.rs  updates.rs  versions.rs
flotsync_replication/src/delivery/: contracts.rs  group_broadcast.rs  ingress.rs  mod.rs  reliable_delivery.rs  route_transport.rs  security.rs  shared.rs  test_support.rs  wire.rs
flotsync_replication/src/delivery/group_broadcast/: mod.rs  wire.rs
flotsync_replication/src/delivery/reliable_delivery/: mod.rs  retry.rs  tests.rs  types.rs  wire.rs
flotsync_replication/src/runtime/: catch_up_manager.rs  component.rs  envelope.rs  errors.rs  handle.rs  host.rs  in_memory.rs  messages.rs  mod.rs  pending_group.rs  replay.rs  store_security_validation.rs  summary_request_manager.rs  tests.rs
flotsync_replication/src/security_store/: feedback.rs  mod.rs  permissions.rs  reports.rs
flotsync_replication/src/store/: mod.rs  sqlite.rs
flotsync_replication/tests/: secure_runtime.rs
flotsync_route_transport/: Cargo.toml
flotsync_route_transport/src/: lib.rs  manager.rs  test_support.rs
flotsync_routes/: Cargo.toml
flotsync_routes/src/: endpoint_discovery.rs  key_material_discovery.rs  lib.rs  manager.rs  protocol.rs  route_publication.rs  test_support.rs
flotsync_routes/src/key_material_discovery/: tests.rs
flotsync_routes/src/manager/: mod.rs  state.rs  tests.rs
flotsync_routes/src/route_establishment/: component.rs  config.rs  mod.rs  state.rs  tests.rs  wire.rs
flotsync_security/: Cargo.toml
flotsync_security/src/: error.rs  fingerprint.rs  group.rs  hpke.rs  identity.rs  lib.rs  local_store_secret.rs  reliable_payload.rs  sealed_psk_payload.rs  signature.rs  store_secret.rs  test_support.rs  tests.rs  util.rs
flotsync_security/src/local_store_secret/: manager.rs  mod.rs  unmanaged.rs
flotsync_security/src/tests/: fixtures.rs  group_frames.rs  hpke.rs  keys.rs  mod.rs  reliable.rs  store_secret.rs
flotsync_udpour/: Cargo.toml
flotsync_udpour/src/: codec.rs  lib.rs  receiver.rs  roaring_helpers.rs  runtime.rs  runtime_tests.rs  sender.rs  types.rs  wire.rs
flotsync_udpour/src/runtime/: component.rs  mod.rs  public.rs  queue.rs  tests.rs
flotsync_udpour/src/runtime_tests/: basic.rs  frames.rs  harness.rs  mod.rs  resilience.rs  support.rs  timing.rs
(+729 files in other folders)
