[workspace]
members = [
    "flotsync_core",
    "flotsync_messages",
    "flotsync_discovery",
    "flotsync_discovery_cli",
    "flotsync_data_types",
    "flotsync_security",
    "flotsync_routes",
    "flotsync_udpour",
    "flotsync_utils",
    "flotsync_replication",
    "flotsync_io",
    "flotsync_io_examples",
]
resolver = "3"

[workspace.dependencies]
arc-swap = "1"
async-std = "1"
base64 = "0.22"
bitflags = "2"
borrowize = "0.3"
bytes = "1"
chrono = "0.4"
enumset = "1"
futures-util = "0.3"
smallvec = "1"
snafu = "0.9"
itertools = "0.14"
ordered-float = { version = "5.0", default-features = false }
uuid = "1"
kompact = "0.12"
log = "0.4"
sqlx = { version = "0.9", default-features = false, features = ["sqlite", "runtime-async-std"] }
