[package]
name = "flotsync_data_types"
version = "0.1.0"
edition = "2024"

[features]
default = []
test-support = []

[dependencies]
flotsync_utils = { path = "../flotsync_utils" }
itertools = { workspace = true }
similar = { version = "2.7", features = ["unicode"] }
unicode-segmentation = "1"
snafu = { workspace = true }
chrono = "0.4"
ordered-float = { version = "5.0", default-features = false }

[dev-dependencies]
bytes = "1"
