[package]
name = "flotsync_discovery"
version = "0.1.0"
edition = "2024"

[features]
default = []
# These two are mutually exclusive.
zeroconf-via-tokio = ["full-tokio", "zeroconf-tokio"]
zeroconf-via-kompact = ["kompact", "zeroconf", "tokio-sync-only"]
full-tokio = ["tokio/full", "async-trait"]
tokio-sync-only = ["tokio/sync"]

[dependencies]
flotsync_messages = { path = "../flotsync_messages" }
# socket2 = "0.5"
derive_more = { version = "2", features = ["deref", "display", "from"] }
snafu = "0.8"
log = "0.4"
pnet = "0.35"
itertools = "0.14"
hostname = "0.4"
base64 = "0.22"
blocking = "1"
uuid = { version = "1", features = ["v4"] }

tokio = { version = "1", default-features = false }
zeroconf = { version = "0.15", optional = true }
zeroconf-tokio = { version = "0.2", optional = true }
kompact = { version = "0.11", optional = true }
async-trait = { version = "0.1", optional = true }
