[package]
name = "flotsync_discovery"
version = "0.1.0"
edition = "2024"

[features]
default = ["zeroconf-via-kompact"]
kompact-runtime = ["dep:kompact"]
peer-announcement-via-kompact = ["kompact-runtime", "dep:flotsync_io"]
zeroconf-support = ["dep:zeroconf"]
zeroconf-via-kompact = [
    "kompact-runtime",
    "peer-announcement-via-kompact",
    "zeroconf-support",
]

[dependencies]
flotsync_io = { path = "../flotsync_io", default-features = false, optional = true }
flotsync_messages = { path = "../flotsync_messages" }
# socket2 = "0.5"
derive_more = { version = "2", features = ["deref", "display", "from"] }
snafu = { workspace = true }
log = "0.4"
pnet = "0.35"
itertools = "0.14"
hostname = "0.4"
base64 = "0.22"
blocking = "1"
uuid = { version = "1", features = ["v4"] }

zeroconf = { version = "0.15", optional = true }
kompact = { workspace = true, optional = true }

[dev-dependencies]
flotsync_io = { path = "../flotsync_io", features = ["test-support"] }
