[package]
name = "flotsync_discovery_cli"
version = "0.1.0"
edition = "2024"

[features]
default = ["zeroconf"]
zeroconf = ["flotsync_discovery/zeroconf-via-kompact"]

[dependencies]
flotsync_discovery = { path = "../flotsync_discovery", default-features = false, features = ["peer-announcement-via-kompact"] }
flotsync_io = { path = "../flotsync_io", default-features = false }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
