[package]
name = "flotsync_io"
version = "0.1.0"
edition = "2024"

[dependencies]
flotsync_utils = { path = "../flotsync_utils" }
bytes = "1"
crossbeam-channel = "0.5"
futures-channel = "0.3"
kompact = { workspace = true }
log = "0.4"
mio = { version = "1", features = ["net", "os-poll"] }
socket2 = "0.5"
snafu = { workspace = true }

[dev-dependencies]
simple_logger = "5"
