[package]
name = "flotsync_io_examples"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
flotsync_io = { path = "../flotsync_io" }
http = "1"
httparse = "1"
itoa = "1"
kompact = { workspace = true }
log = "0.4"
slog = "2"
slog-scope = "4"
slog-stdlog = "4"
slog-term = "2"
snafu = { workspace = true }

[[bin]]
name = "netcat"
path = "src/bin/netcat.rs"

[[bin]]
name = "http_server"
path = "src/bin/http_server.rs"
