[package]
name = "flotsync_io_examples"
version = "0.1.0"
edition = "2024"

[features]
default = ["local-secret-manager"]
local-secret-manager = [
    "flotsync_replication/local-secret-manager",
    "flotsync_security/local-secret-manager",
]

[dependencies]
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
flotsync_core = { path = "../flotsync_core" }
flotsync_data_types = { path = "../flotsync_data_types" }
flotsync_io = { path = "../flotsync_io" }
flotsync_replication = { path = "../flotsync_replication", default-features = false }
flotsync_security = { path = "../flotsync_security", default-features = false }
chrono = { workspace = true }
futures-util = { workspace = true }
http = "1"
httparse = "1"
itertools = { workspace = true }
itoa = "1"
kompact = { workspace = true }
log = "0.4"
slog = "2"
slog-scope = "4"
slog-stdlog = "4"
slog-term = "2"
sha2 = "0.10"
snafu = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
flotsync_replication = { path = "../flotsync_replication", features = ["test-support"] }

[[bin]]
name = "netcat"
path = "src/bin/netcat.rs"

[[bin]]
name = "http_server"
path = "src/bin/http_server.rs"

[[bin]]
name = "replicated_checklist"
path = "src/bin/replicated_checklist.rs"
