[package]
name = "flotsync_messages"
version = "0.1.0"
edition = "2024"

[dependencies]
buffa = "0.3"
flotsync_core = { path = "../flotsync_core" }
flotsync_data_types = { path = "../flotsync_data_types" }
ordered-float = { workspace = true }
snafu = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
buffa-build = "0.3"

[dev-dependencies]
criterion = "0.5"
flotsync_data_types = { path = "../flotsync_data_types", features = ["test-support"] }

[[bench]]
name = "history_snapshot_formats"
harness = false
