[package]
name = "flotsync_messages"
version = "0.1.0"
edition = "2024"

[dependencies]
buffa = "0.8"
bytes = { workspace = true }
flotsync_core = { path = "../flotsync_core" }
flotsync_data_types = { path = "../flotsync_data_types" }
flotsync_io = { path = "../flotsync_io", default-features = false }
flotsync_utils = { path = "../flotsync_utils" }
futures-util = { workspace = true }
ordered-float = { workspace = true }
snafu = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
buffa-build = "0.8"

[dev-dependencies]
criterion = "0.8"
flotsync_data_types = { path = "../flotsync_data_types", features = ["test-support"] }

[[bench]]
name = "history_snapshot_formats"
harness = false
