[package]
name = "flotsync_replication"
version = "0.1.0"
edition = "2024"

[features]
test-support = ["flotsync_security/test-support"]

[dependencies]
arc-swap = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
flotsync_core = { path = "../flotsync_core" }
flotsync_data_types = { path = "../flotsync_data_types" }
flotsync_discovery = { path = "../flotsync_discovery", default-features = false, features = ["peer-announcement-via-kompact"] }
flotsync_messages = { path = "../flotsync_messages" }
flotsync_security = { path = "../flotsync_security" }
flotsync_udpour = { path = "../flotsync_udpour" }
flotsync_io = { path = "../flotsync_io" }
flotsync_utils = { path = "../flotsync_utils" }
futures-util = { workspace = true }
interval = { package = "intervallum", version = "1" }
itertools = { workspace = true }
kompact = { workspace = true }
log = { workspace = true }
smallvec = "1"
snafu = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
flotsync_security = { path = "../flotsync_security", features = ["test-support"] }
