[package]
name = "flotsync_replication"
version = "0.1.0"
edition = "2024"

[features]
default = ["local-secret-manager"]
local-secret-manager = ["flotsync_security/local-secret-manager"]
test-support = ["flotsync_security/test-support"]

[dependencies]
arc-swap = { workspace = true }
base64 = { workspace = true }
borrowize = { workspace = true }
bytes = { workspace = true }
enumset = { workspace = true }
flotsync_core = { path = "../flotsync_core" }
flotsync_data_types = { path = "../flotsync_data_types" }
flotsync_discovery = { path = "../flotsync_discovery", default-features = false, features = ["peer-announcement-via-kompact"] }
flotsync_messages = { path = "../flotsync_messages" }
flotsync_routes = { path = "../flotsync_routes" }
flotsync_security = { path = "../flotsync_security", default-features = false }
flotsync_io = { path = "../flotsync_io" }
flotsync_utils = { path = "../flotsync_utils" }
futures-util = { workspace = true }
interval = { package = "intervallum", version = "1" }
itertools = { workspace = true }
kompact = { workspace = true }
log = { workspace = true }
roaring = { workspace = true }
smallvec = { workspace = true }
snafu = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
flotsync_routes = { path = "../flotsync_routes", features = ["test-support"] }
flotsync_security = { path = "../flotsync_security", features = ["test-support"] }
