[package]
name = "flotsync_security"
version = "0.1.0"
edition = "2024"

[features]
test-support = ["dep:rand_chacha"]

[dependencies]
bytes = { workspace = true }
chacha20poly1305 = "0.10.1"
ed25519-dalek = { version = "2.2.0", features = ["digest"] }
flotsync_core = { path = "../flotsync_core" }
flotsync_utils = { path = "../flotsync_utils" }
hpke = { version = "0.13.0", default-features = false, features = ["std", "x25519"] }
jose-jwk = { version = "0.1.2", default-features = false }
rand_chacha = { version = "0.9", optional = true }
rand_core = { version = "0.9", features = ["os_rng", "std"] }
serde_json = "1"
sha2 = "0.10"
snafu = { workspace = true }
uuid = { workspace = true }
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
rand_chacha = "0.9"
