[package]
name = "flotsync_udpour"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
crc32c = "0.6"
flotsync_io = { path = "../flotsync_io" }
flotsync_utils = { path = "../flotsync_utils" }
kompact = { workspace = true }
roaring = { workspace = true }
smallvec = { workspace = true }
snafu = { workspace = true }
